# rigid-body-motion

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  api.html  authors.html  contributing.html  environment-ros.yml  environment.devenv.yml  environment.yml  estimators.html  estimators.ipynb  genindex.html  history.html  index.html  installation.html  objects.inv  pyproject.toml  readthedocs.yml  reference_frames.html  reference_frames.ipynb  requirements.txt  requirements_conda.txt  requirements_dev.txt  roadmap.html  ros.html  ros.ipynb  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  (+4 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_generated/: rigid_body_motion.ReferenceFrame.deregister.html  rigid_body_motion.ReferenceFrame.from_dataset.html  rigid_body_motion.ReferenceFrame.from_rotation_dataarray.html  rigid_body_motion.ReferenceFrame.from_rotation_matrix.html  rigid_body_motion.ReferenceFrame.from_translation_dataarray.html  rigid_body_motion.ReferenceFrame.html  rigid_body_motion.ReferenceFrame.lookup_angular_velocity.html  rigid_body_motion.ReferenceFrame.lookup_linear_velocity.html  rigid_body_motion.ReferenceFrame.lookup_transform.html  rigid_body_motion.ReferenceFrame.lookup_twist.html  rigid_body_motion.ReferenceFrame.register.html  rigid_body_motion.ReferenceFrame.transform_angular_velocity.html  rigid_body_motion.ReferenceFrame.transform_linear_velocity.html  rigid_body_motion.ReferenceFrame.transform_points.html  rigid_body_motion.ReferenceFrame.transform_quaternions.html  rigid_body_motion.ReferenceFrame.transform_vectors.html  rigid_body_motion.best_fit_rotation.html  rigid_body_motion.best_fit_transform.html  rigid_body_motion.cartesian_to_polar.html  rigid_body_motion.cartesian_to_spherical.html  rigid_body_motion.clear_registry.html  rigid_body_motion.deregister_frame.html  rigid_body_motion.estimate_angular_velocity.html  rigid_body_motion.estimate_linear_velocity.html  rigid_body_motion.from_euler_angles.html  (+36 more)
docs/: api.rst  (+13 more)
(+161 files in other folders)
